add java new version demo