@@ -5,12 +5,19 @@ plugins {
 group 'org.javatest'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 13
 
 repositories {
     mavenCentral()
 }
 
+
+compileJava {
+    options.compilerArgs += ["--enable-preview"]
+}
+test {
+    jvmArgs '--enable-preview'
+}
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
